# Wikipedia-API

./: .codeclimate.yml  .deepsource.toml  .dockerignore  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ADDING_SUBMODULES.md  AGENTS.md  API.rst  CHANGES.rst  CLAUDE.md  CLI.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DESIGN.rst  DEVELOPMENT.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.rst  SKILLS_README.md  VCR_JSON_EXTRACTOR.md  conf.py  context7.json  example.py  example_async.py  example_sync.py  extract_vcr_json.py  index.rst  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  (+3 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bandit.yml  cli-test.yml  code-quality.yml  codeql.yml  dependabot-approve-updates.yml  dependency-review.yml  deploy.yml  matrix.json  pyre.yml  release.yml  scorecard.yml  stale.yml  tox.yml  validate-attributes-mapping.yml
SKILLS/: README.md  bash.md  python-async.md  python-sync.md
SKILLS/category_deep_dive/: SKILL.md  async.py  cli.sh  sync.py
SKILLS/custom_page_output/: SKILL.md  async.py  cli.sh  sync.py
SKILLS/explore_nearby/: SKILL.md  async.py  cli.sh  sync.py
SKILLS/media_audit/: SKILL.md  async.py  cli.sh  sync.py
SKILLS/multilingual_content/: SKILL.md  async.py  cli.sh  sync.py
SKILLS/research_topic/: SKILL.md  async.py  cli.sh  sync.py
examples/: example_async.py  example_cli.sh  example_sync.py
scripts/: validate_attributes_mapping.py  verify-skills.sh  verify_skills.py
scripts/docs/: SKILLS_README.md  VCR_JSON_EXTRACTOR.md
tests/: async_http_client_test.py  async_namespace_behavior_test.py  async_wikipedia_page_test.py  async_wikipedia_test.py  backlinks_test.py  categories_test.py  categorymembers_test.py  cli_helpers.py  cli_integration_test.py  cli_test.py  conftest.py  coordinates_prop_enum_test.py  enum_converters_edge_cases_test.py  enum_usage_examples_test.py  extract_errors_test.py  extract_html_format_test.py  extract_wiki_format_test.py  extracts_test.py  foo_test.py  gen_keys.py  http_client_kwargs_test.py  http_client_test.py  langlinks_test.py  links_test.py  mock_data.py  namespace_behavior_test.py  page_terms_test.py  params_coverage_test.py  query_errors_test.py  query_submodules_test.py  request_test.py  search_enums_test.py  test_sync_async_symmetry.py  vcr_page_async_test.py  vcr_page_sync_test.py  vcr_pages_dict_async_test.py  vcr_pages_dict_sync_test.py  vcr_wiki_client_async_test.py  vcr_wiki_client_sync_test.py  wikipedia_page_section_test.py  (+2 more)
tests/cassettes/: TestVcrAsyncPageCoordinatesImages.test_coordinates.json  TestVcrAsyncPageCoordinatesImages.test_images.json  TestVcrAsyncPageExistence.test_exists_false.json  TestVcrAsyncPageExistence.test_exists_true.json  TestVcrAsyncPageExtractProps.test_section_by_title.json  TestVcrAsyncPageExtractProps.test_section_by_title_missing.json  TestVcrAsyncPageExtractProps.test_sections.json  TestVcrAsyncPageExtractProps.test_sections_by_title.json  TestVcrAsyncPageExtractProps.test_sections_by_title_missing.json  TestVcrAsyncPageExtractProps.test_summary.json  TestVcrAsyncPageExtractProps.test_text.json  TestVcrAsyncPageIdentity.test_repr_after_fetch.json  TestVcrAsyncPageInfoProps.test_canonicalurl.json  TestVcrAsyncPageInfoProps.test_contentmodel.json  TestVcrAsyncPageInfoProps.test_displaytitle.json  TestVcrAsyncPageInfoProps.test_editurl.json  (+231 more)
tests/cassettes-responses/: TestVcrAsyncPageRelationProps.test_backlinks_12.json  TestVcrAsyncPageRelationProps.test_backlinks_17.json  TestVcrAsyncPageRelationProps.test_backlinks_18.json  TestVcrAsyncPageRelationProps.test_backlinks_6.json  TestVcrAsyncPageRelationProps.test_categorymembers_0.json  TestVcrAsyncPageRelationProps.test_links_0.json  TestVcrAsyncPagesDictCoordinates.test_distance_from_point_0.json  TestVcrAsyncPagesDictCoordinates.test_primary[all]_0.json  TestVcrAsyncPagesDictCoordinates.test_primary[secondary]_0.json  TestVcrAsyncPagesDictCoordinates.test_prop[country]_0.json  TestVcrAsyncPagesDictCoordinates.test_prop[name]_0.json  TestVcrAsyncWikiBacklinks.test_backlinks_0.json  TestVcrAsyncWikiBacklinks.test_backlinks_13.json  TestVcrAsyncWikiBacklinks.test_backlinks_14.json  TestVcrAsyncWikiBacklinks.test_backlinks_19.json  TestVcrAsyncWikiBacklinks.test_backlinks_20.json  TestVcrAsyncWikiBacklinks.test_backlinks_3.json  TestVcrAsyncWikiBacklinks.test_backlinks_4.json  TestVcrAsyncWikiBacklinks.test_backlinks_7.json  TestVcrAsyncWikiCategories.test_categories_0.json  TestVcrAsyncWikiCoordinates.test_distance_from_page_0.json  TestVcrAsyncWikiCoordinates.test_distance_from_point_0.json  TestVcrAsyncWikiCoordinates.test_prop[dim]_0.json  TestVcrAsyncWikiExtracts.test_extracts_0.json  TestVcrAsyncWikiGeosearch.test_bbox_0.json  TestVcrAsyncWikiGeosearch.test_namespace[user]_0.json  TestVcrAsyncWikiGeosearch.test_page_0.json  TestVcrAsyncWikiGeosearch.test_prop_and_primary_0.json  TestVcrAsyncWikiImageinfoRaw.test_default_props_0.json  TestVcrAsyncWikiImageinfoRaw.test_size_prop_0.json  TestVcrAsyncWikiImageinfoRaw.test_url_prop_0.json  TestVcrAsyncWikiImages.test_direction[ascending]_1.json  TestVcrAsyncWikiImages.test_limit_4.json  TestVcrAsyncWikiImages.test_limit_5.json  TestVcrAsyncWikiRandom.test_default_0.json  TestVcrAsyncWikiRandom.test_filter_redirect[all]_0.json  TestVcrAsyncWikiRandom.test_filter_redirect[nonredirects]_0.json  TestVcrAsyncWikiRandom.test_filter_redirect[redirects]_0.json  TestVcrAsyncWikiRandom.test_limit_0.json  TestVcrAsyncWikiRandom.test_namespace[category]_0.json  (+75 more)
tests/cli/: test_cli.sh
wikipedia/: __init__.py  wikipedia.py
wikipediaapi/: __init__.py  __init__.rst  _base_wikipedia_image.py  _base_wikipedia_page.py  _enums.py  _http_client.py  _pages_dict.py  _params.py  _resources.py  _types.py  _version.py  api.rst  async_wikipedia.py  async_wikipedia_image.py  async_wikipedia_page.py  cli.py  exceptions.py  extract_format.py  namespace.py  wikipedia.py  wikipedia.rst  wikipedia_image.py  wikipedia_page.py  wikipedia_page_section.py
(+157 files in other folders)
