[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Wikipedia-API"
version = "0.14.1"
description = "Python Wrapper for Wikipedia"
readme = {file = "README_processed.rst", content-type = "text/x-rst"}
license = {text = "MIT"}
authors = [
    {name = "Martin Majlis", email = "martin@majlis.cz"},
]
keywords = ["Wikipedia", "API", "wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "click==8.3.3",
    "httpx==0.28.1",
    "tenacity==9.1.4",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "ruff>=0.11.0",
    "ty==0.0.27",
    "pre-commit==4.6.0",
    "pygments==2.20.0",
    "pyupgrade==3.21.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "tox==4.53.0",
    "anyio[trio]==4.13.0",
    "respx==0.23.1",
    "types-setuptools==82.0.0.20260408",
    "pytest-recording>=0.13.2",
    "vcrpy>=6.0.0",
    "ty>=0.0.27",
]
doc = [
    "sphinx==9.1.0; python_version >= '3.12'",
]
build = [
    "rst2html==2020.7.4",
    "setuptools==82.0.1",
    "twine>=6.2.0",
    "wheel==0.46.3",
]
testing = [
    "anyio[trio]==4.13.0",
    "respx==0.23.1",
]

[project.urls]
Homepage = "https://github.com/martin-majlis/Wikipedia-API"
Repository = "https://github.com/martin-majlis/Wikipedia-API"
"Bug Tracker" = "https://github.com/martin-majlis/Wikipedia-API/issues"

[project.scripts]
wikipedia-api = "wikipediaapi.cli:main"

# Tool-specific Python version requirements
[tool.doc-build]
requires-python = ">=3.12"

[tool.hatch.build]
include = [
    "wikipediaapi/**/*.py",
    "LICENSE",
    "CHANGES.rst",
    "README.rst",
    "DEVELOPMENT.rst",
    "DESIGN.rst",
    "API.rst",
    "CLI.rst",
    "pyproject.toml",
    "examples/**",
    "SKILLS/**/*.py",
    "SKILLS/**/*.sh",
    "SKILLS/**/*.md",
]

exclude = [
    "tests/**",
    ".github/**",
    "docs/**",
    "Makefile",
    "tox.ini",
    "uv.lock",
    "conf.py",
    "context7.json",
    "index.rst",
    "MANIFEST.in",
    ".gitignore",
    ".deepsource.toml",
    ".dockerignore",
    ".flake8",
    ".isort.cfg",
    ".mypy.ini",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    ".travis.yml",
    "AGENTS.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.rst",
    "SECURITY.md",
    "SECURITY.rst"
]

[tool.hatch.build.targets.wheel]
packages = ["wikipediaapi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "ASYNC", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
force-single-line = true

[tool.ruff.format]
# Black-compatible formatting (default)

[tool.coverage.run]
source = ["wikipediaapi"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin:",
    "ignore::pytest.PytestDeprecationWarning:asyncio_default_fixture_loop_scope",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "vcr: marks tests that use VCR cassettes for HTTP recording/replay",
]


[tool.ty.environment]
python-version = "3.10"

# Make ty more lenient for complex async resource patterns
# These would require major architectural refactoring to fix properly

[tool.ty.rules]
# Disable strict rules that cause issues with complex async patterns
"invalid-argument-type" = "warn"
"invalid-return-type" = "warn"
"unresolved-attribute" = "warn"
"invalid-await" = "warn"
"empty-body" = "warn"
